assign process overflow fix

--- a/resources/css/light.css
+++ b/resources/css/light.css
@@ -229,7 +229,7 @@ th{
     background: #ffffff;
     color: #334155;
     padding: 0 1.5rem 0 1.5rem !important;
-    min-height: 63vh;
+    height: 63vh;
 }
 
 .p-dialog:not(.p-confirm-dialog) .p-dialog-footer {
